fix: add unsafe=True to make code properly run
Without this change, `OutputAdapter` has an output of type string, which results in the following error:

> Error: SentenceTransformersDocumentEmbedder expects a list of Documents as input.In case you want to embed a string, please use the SentenceTransformersTextEmbedder.

_Note: the cookbook repo's Jupyter Notebook should also be updated._

--- a/docs-website/versioned_docs/version-2.20/optimization/advanced-rag-techniques/hypothetical-document-embeddings-hyde.mdx
+++ b/docs-website/versioned_docs/version-2.20/optimization/advanced-rag-techniques/hypothetical-document-embeddings-hyde.mdx
@@ -53,7 +53,8 @@ prompt_builder = PromptBuilder(
 adapter = OutputAdapter(
     template="{{answers | build_doc}}",
     output_type=List[Document],
-    custom_filters={"build_doc": lambda data: [Document(content=d) for d in data]}
+    custom_filters={"build_doc": lambda data: [Document(content=d) for d in data]},
+    unsafe=True
 )
 
 embedder = SentenceTransformersDocumentEmbedder(model="sentence-transformers/all-MiniLM-L6-v2")
