--- a/docs-website/docs/pipeline-components/query/queryexpander.mdx
+++ b/docs-website/docs/pipeline-components/query/queryexpander.mdx
@@ -41,7 +41,7 @@ The generated queries:
 - Use different words and phrasings while maintaining the same core meaning
 - Include synonyms and related terms
 - Preserve the original query's language
-- Are designed to work well with both keyword-based and semantic search
+- Are designed to work well with both keyword-based and semantic search (such as embeddings)
 
 You can control the number of query expansions with the `n_expansions` parameter and choose whether to include the original query in the output with the `include_original_query` parameter.
 
