--- a/docs-website/versioned_docs/version-2.21-unstable/pipeline-components/extractors.mdx
+++ b/docs-website/versioned_docs/version-2.21-unstable/pipeline-components/extractors.mdx
@@ -10,4 +10,5 @@ slug: "/extractors"
 | --- | --- |
 | [LLMDocumentContentExtractor](extractors/llmdocumentcontentextractor.mdx) | Extracts textual content from image-based documents using a vision-enabled Large Language Model (LLM).                                     |
 | [LLMMetadataExtractor](extractors/llmmetadataextractor.mdx)               | Extracts metadata from documents using a Large Language Model. The metadata is extracted by providing a prompt to a LLM that generates it. |
-| [NamedEntityExtractor](extractors/namedentityextractor.mdx)               | Extracts predefined entities out of a piece of text and writes them into documents’ meta field.                                            |
+| [NamedEntityExtractor](extractors/namedentityextractor.mdx)               | Extracts predefined entities out of a piece of text and writes them into documents' meta field.                                            |
+| [RegexTextExtractor](extractors/regextextextractor.mdx)                   | Extracts text from chat messages or strings using a regular expression pattern.                                                            |
