Apply suggestion from @davidsbatista

--- a/docs-website/docs/overview/get-started.mdx
+++ b/docs-website/docs/overview/get-started.mdx
@@ -46,7 +46,7 @@ In the example below, we show how to set an API key using a Haystack [Secret](..
 New users on the free tier may immediately encounter a `429` ("insufficient_quota") error when running
 the example below.
 
-If you do not have OpenAI credits, you may skip this example or use an alternative generator such as
+If you do not have enough OpenAI credits, you may skip this example or use an alternative generator such as
 `HuggingFaceAPIChatGenerator`.
 :::
 
