--- a/docs-website/docs/pipeline-components/converters/paddleocrvldocumentconverter.mdx
+++ b/docs-website/docs/pipeline-components/converters/paddleocrvldocumentconverter.mdx
@@ -7,7 +7,7 @@ description: "`PaddleOCRVLDocumentConverter` extracts text from documents using 
 
 # PaddleOCRVLDocumentConverter
 
-`PaddleOCRVLDocumentConverter` extracts text from documents using PaddleOCR's large model document parsing API. PaddleOCR-VL is used behind the scenes. For more information, please refer to: https://www.paddleocr.ai/latest/en/version3.x/algorithm/PaddleOCR-VL/PaddleOCR-VL.html .
+`PaddleOCRVLDocumentConverter` extracts text from documents using PaddleOCR's large model document parsing API. PaddleOCR-VL is used behind the scenes. For more information, please refer to the [PaddleOCR-VL documentation](https://www.paddleocr.ai/latest/en/version3.x/algorithm/PaddleOCR-VL/PaddleOCR-VL.html).
 
 <div className="key-value-table">
 
