--- a/docs-website/docs/pipeline-components/builders/chatpromptbuilder.mdx
+++ b/docs-website/docs/pipeline-components/builders/chatpromptbuilder.mdx
@@ -76,7 +76,7 @@ result = builder.run(name="Alice")
 ## Output: "Hello, Alice. How can I assist you with ?"
 ```
 
-The components only waits for the required inputs before running.
+The components only wait for the required inputs before running.
 
 ### Roles
 
@@ -161,6 +161,7 @@ The common format codes are:
 ```python
 from haystack.components.builders.chat_prompt_builder import ChatPromptBuilder
 from haystack.dataclasses import ChatMessage
+import arrow
 
 template = [
     ChatMessage.from_user("Current date is: {% now 'UTC' %}"),
