--- a/docs-website/versioned_docs/version-2.21/pipeline-components/builders/chatpromptbuilder.mdx
+++ b/docs-website/versioned_docs/version-2.21/pipeline-components/builders/chatpromptbuilder.mdx
@@ -76,7 +76,7 @@ result = builder.run(name="Alice")
 ## Output: "Hello, Alice. How can I assist you with ?"
 ```
 
-The components only waits for the required inputs before running.
+The components only wait for the required inputs before running.
 
 ### Roles
 
@@ -159,6 +159,7 @@ The common format codes are:
 #### Example
 
 ```python
+import arrow
 from haystack.components.builders.chat_prompt_builder import ChatPromptBuilder
 from haystack.dataclasses import ChatMessage
 
