Update documentation text with rebranding

--- a/docs-website/docs/concepts/pipelines/visualizing-pipelines.mdx
+++ b/docs-website/docs/concepts/pipelines/visualizing-pipelines.mdx
@@ -1,13 +1,13 @@
 ---
-title: "Visualizing Pipelines"
+title: "Visualizing Haystack Pipelines"
 id: visualizing-pipelines
 slug: "/visualizing-pipelines"
-description: "You can visualize your pipelines as graphs to better understand how the components are connected."
+description: "You can visualize your Haystack AI pipelines as graphs to better understand how the components are connected."
 ---
 
 import ClickableImage from "@site/src/components/ClickableImage";
 
-# Visualizing Pipelines
+# Visualizing Haystack Pipelines
 
 You can visualize your pipelines as graphs to better understand how the components are connected.
 
@@ -82,8 +82,8 @@ This is an example of what a pipeline graph may look like:
 
 <br />
 
-## Importing a Pipeline to deepset Studio
+## Importing a Pipeline to Haystack Enterprise Platform
 
-You can import your Haystack pipeline into deepset Studio and continue visually building your pipeline
+You can import your Haystack pipeline into Haystack Enterprise Platform and continue visually building your pipeline
 
-To do that, follow the steps described in our deepset AI Platform [documentation](https://docs.cloud.deepset.ai/docs/import-a-pipeline#import-your-pipeline).
+To do that, follow the steps described in our Haystack Enterprise Platform [documentation](https://docs.cloud.deepset.ai/docs/import-a-pipeline#import-your-pipeline).
