--- a/docs-website/docs/development/deployment.mdx
+++ b/docs-website/docs/development/deployment.mdx
@@ -27,9 +27,9 @@ Haystack can be easily integrated into any HTTP application, but if you don’t 
 
 :::note Looking to scale with confidence?
 
-If your team needs **enterprise-grade support, best practices, and deployment guidance** to run Haystack in production, check out **Haystack Enterprise**.
+If your team needs **enterprise-grade support, best practices, and deployment guidance** to run Haystack in production, check out **Haystack Enterprise Starter**.
 
-📜 [Learn more about Haystack Enterprise](https://haystack.deepset.ai/blog/announcing-haystack-enterprise)
+📜 [Learn more about Haystack Enterprise Starter](https://haystack.deepset.ai/blog/announcing-haystack-enterprise)
 
 👉 [Get in touch with our team](https://www.deepset.ai/products-and-services/haystack-enterprise)
 :::
