minor updates to the text

--- a/docs-website/docs/concepts/pipelines/visualizing-pipelines.mdx
+++ b/docs-website/docs/concepts/pipelines/visualizing-pipelines.mdx
@@ -86,4 +86,4 @@ This is an example of what a pipeline graph may look like:
 
 You can import your Haystack pipeline into Haystack Enterprise Platform and continue visually building your pipeline
 
-To do that, follow the steps described in our Haystack Enterprise Platform [documentation](https://docs.cloud.deepset.ai/docs/import-a-pipeline#import-your-pipeline).
+To do that, follow the steps described in Haystack Enterprise Platform [documentation](https://docs.cloud.deepset.ai/docs/import-a-pipeline#import-your-pipeline).
