--- a/docs-website/docs/overview/faq.mdx
+++ b/docs-website/docs/overview/faq.mdx
@@ -19,7 +19,7 @@ We only collect _anonymous_ usage statistics of Haystack pipeline components. Re
 
 ### How can I ask my questions around Haystack?
 
-For general questions, we recommend joining the [Haystack Discord ](https://discord.com/invite/xYvH6drSmA)or using [GitHub discussions](https://github.com/deepset-ai/haystack/discussions), where the community and maintainers can help. You can also explore [tutorials](https://haystack.deepset.ai/tutorials/40_building_chat_application_with_function_calling) and [examples](https://haystack.deepset.ai/cookbook/tools_support) on our website to find more info.
+For general questions, we recommend joining the [Haystack Discord ](https://discord.com/invite/xYvH6drSmA)or using [GitHub discussions](https://github.com/deepset-ai/haystack/discussions), where the community and maintainers can help. You can also explore [tutorials](https://haystack.deepset.ai/tutorials/40_building_chat_application_with_function_calling) and [examples](https://haystack.deepset.ai/cookbook/tools_support) on website to find more info.
 
 ### How can I get expert support for Haystack?
 
