docs: Update documentation text with changes after rebranding (#10272)
* Update documentation text with rebranding

* minor updates to the text

* Update 2.21 versions of the docs pages

* Change banner image on README

* add alt text for the new image

--- a/docs-website/docs/overview/faq.mdx
+++ b/docs-website/docs/overview/faq.mdx
@@ -19,13 +19,13 @@ We only collect _anonymous_ usage statistics of Haystack pipeline components. Re
 
 ### How can I ask my questions around Haystack?
 
-For general questions, we recommend joining the [Haystack Discord ](https://discord.com/invite/xYvH6drSmA)or using [GitHub discussions](https://github.com/deepset-ai/haystack/discussions), where the community and maintainers can help. You can also explore [tutorials](https://haystack.deepset.ai/tutorials/40_building_chat_application_with_function_calling) and [examples](https://haystack.deepset.ai/cookbook/tools_support) on our website to find more info.
+For general questions, we recommend joining the [Haystack Discord ](https://discord.com/invite/xYvH6drSmA)or using [GitHub discussions](https://github.com/deepset-ai/haystack/discussions), where the community and maintainers can help. You can also explore [tutorials](https://haystack.deepset.ai/tutorials/40_building_chat_application_with_function_calling) and [examples](https://haystack.deepset.ai/cookbook/tools_support) on website to find more info.
 
 ### How can I get expert support for Haystack?
 
-If you’re a team running Haystack in production or want to move faster and scale with confidence, we recommend [Haystack Enterprise](https://haystack.deepset.ai/blog/announcing-haystack-enterprise). It gives you direct access to the Haystack team, proven best practices, and hands-on support to help you go from prototype to production smoothly.
+If you’re a team running Haystack in production or want to move faster and scale with confidence, we recommend [Haystack Enterprise Starter](https://haystack.deepset.ai/blog/announcing-haystack-enterprise). It gives you direct access to the Haystack team, proven best practices, and hands-on support to help you go from prototype to production smoothly.
 
-👉 [Get in touch with our team to explore Haystack Enterprise](https://www.deepset.ai/products-and-services/haystack-enterprise)
+👉 [Get in touch with our team to explore Haystack Enterprise Starter](https://www.deepset.ai/products-and-services/haystack-enterprise)
 
 ### Where is the documentation for Haystack 2.17 and older?
 
