remove redundant images and fix typos

--- a/docs-website/docs/intro.mdx
+++ b/docs-website/docs/intro.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Introduction to Haystack"
 id: intro
-description: "Haystack is an open-source AI framework to build production-ready LLM applications such as **AI Agents, powerful RAG applications and scalable multimodal search systems. Learn more about Haystack and how it works."
+description: "Haystack is an open-source AI framework to build production-ready LLM applications such as AI Agents, powerful RAG applications and scalable multimodal search systems. Learn more about Haystack and how it works."
 ---
 
 # Introduction to Haystack
