--- a/docs-website/docs/pipeline-components/builders/chatpromptbuilder.mdx
+++ b/docs-website/docs/pipeline-components/builders/chatpromptbuilder.mdx
@@ -76,7 +76,7 @@ result = builder.run(name="Alice")
 ## Output: "Hello, Alice. How can I assist you with ?"
 ```
 
-The components only wait for the required inputs before running.
+The component only waits for the required inputs before running.
 
 ### Roles
 
