--- a/docs-website/versioned_docs/version-2.21/pipeline-components/builders/chatpromptbuilder.mdx
+++ b/docs-website/versioned_docs/version-2.21/pipeline-components/builders/chatpromptbuilder.mdx
@@ -76,7 +76,7 @@ result = builder.run(name="Alice")
 ## Output: "Hello, Alice. How can I assist you with ?"
 ```
 
-The components only wait for the required inputs before running.
+The component only waits for the required inputs before running.
 
 ### Roles
 
@@ -159,7 +159,6 @@ The common format codes are:
 #### Example
 
 ```python
-import arrow
 from haystack.components.builders.chat_prompt_builder import ChatPromptBuilder
 from haystack.dataclasses import ChatMessage
 
@@ -171,9 +170,6 @@ template = [
 builder = ChatPromptBuilder(template=template)
 
 result = builder.run()["prompt"]
-
-now = f"Current date is: {arrow.now('UTC').strftime('%Y-%m-%d %H:%M:%S')}"
-yesterday = f"Yesterday was: {(arrow.now('UTC').shift(days=-1)).strftime('%Y-%m-%d %H:%M:%S')}"
 ```
 
 ## Usage
