docs: added necessary import and fixed a typo in ChatPromptBuilder (#10261)
* docs: added necessary import and fixed a typo

* docs: added necessary import and fixed a typo

* changed order of imports

Removed redundant import of 'arrow' in chatpromptbuilder.mdx.

* Update docs-website/docs/pipeline-components/builders/chatpromptbuilder.mdx

Co-authored-by: Stefano Fiorucci <stefanofiorucci@gmail.com>

* removing arrow code from the example

* removing arrow code from the example in PromptBuilder

Removed unused date variables from promptbuilder.mdx.

* Removed the unnecessary arrow code

Corrected grammatical errors and removed unused imports.

* Removed the unnecessary arrow code

Removed unused variables for current and yesterday's date.

---------

Co-authored-by: Stefano Fiorucci <stefanofiorucci@gmail.com>

--- a/docs-website/docs/pipeline-components/builders/chatpromptbuilder.mdx
+++ b/docs-website/docs/pipeline-components/builders/chatpromptbuilder.mdx
@@ -76,7 +76,7 @@ result = builder.run(name="Alice")
 ## Output: "Hello, Alice. How can I assist you with ?"
 ```
 
-The components only waits for the required inputs before running.
+The component only waits for the required inputs before running.
 
 ### Roles
 
@@ -170,9 +170,6 @@ template = [
 builder = ChatPromptBuilder(template=template)
 
 result = builder.run()["prompt"]
-
-now = f"Current date is: {arrow.now('UTC').strftime('%Y-%m-%d %H:%M:%S')}"
-yesterday = f"Yesterday was: {(arrow.now('UTC').shift(days=-1)).strftime('%Y-%m-%d %H:%M:%S')}"
 ```
 
 ## Usage
